--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "@ngrx/store-devtools": "^8.0.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@thisissoon/angular-inviewport": "^4.2.0",
     "bootstrap": "^4.3.1",
     "browser-detect": "^0.2.28",
     "hammerjs": "^2.0.8",
+    "intersection-observer": "^0.7.0",
     "rxjs": "~6.5.0",
     "tslib": "^1.9.0",
     "uuid": "^3.3.2",
